cs.css
			/**
			TODO
				1. implement mobile view & desktop view
					a. hide search and top button
					b. strech each search results to 1 row
					** my iphone is iphone 5, 568 x 320
					
				2. change aspect ratio of iframe dynamically with 4:3 
				
				Was working on responsive grid for iphone5
				
			**/
			
			
			/* From top to bottom*/
			/* G L O B A L   P R O P E R T I E S */			
* {
	box-sizing: border-box;
}
body {
	background-color: #a2836e;
}
.hide	 {
  display: none!important;
}
section {
	
}
.video-list{
	font-weight: bold;
	margin-left: 50px;
	font-size: x-large;
}
.video-container{
	float: right;
}
	/* Buttons */
	
.page-btn {
	height: 80px;
	bottom: 0;
	width: 45%;
	background-color: antiquewhite;
}

.button-container {
	clear: left;
	//height: 120px;
	position: relative;
	
	
	//margin-top: 30px;
	margin-bottom: 30px;
	padding-top: 5px;
	height: 100px;
}

.next-btn {
	/*
	position: absolute;
	right: 0;
	*/
}

.prev-btn {
	/*
	position: absolute;
	left: 0;
	*/
}
/* For search result button container */
.s-btn-container {
	//height: 90px;
}
/* For related video button container */
.rel-btn-container {
	//padding-top: 40px;
	//padding-top: 5px;
	//height: 100px;
	//margin-bottom: 30px;
}
.btn:hover {
	background-color: #fff2df;
}
	/* End of Buttons */
	
.iframez {
	display: inline-block;
	width: 48%;
	position: fixed;
	text-align: center;
}

.videoz {
	width: 47%;
	display: inline-block;
	position: absolute;
	right: 0;
	z-index: 1;
}

			
			/* S E A R C H   S E C T I O N */
header {
	position: fixed!important;
	top: 0;
	left: 0;
	width: 100%;
	clear: both;
	background-color: #674d3c;
	padding: 5px 20px;
	z-index: 2;
}
.search-span{
	font-size: xx-large;
	font-family: 'Ranchers', cursive;
	display: block;
	//position: relative;
	//left: 40px;
}
a, a:active {
	text-decoration: none;
	color: #d9ad7c;f
}
a:hover {
	color: #fff2df;
}

input[type=text] {
  /*
  width: 350px;
  padding: 2px 3px;
  height: 40px;
  font-size: 25px;
  */
}
.form-submit-btn{
	/*
	background-color: #d9ad7c;
	position: relative;
	bottom: 4px;
	left: 5px;
	*/
}
.search-btn {

}
.invisibility {
	visibility: hidden;
}
.search-form {
	display: inline-block;
}

.header-toggle-result {
	
}
.header-div {
	//float: right;
	display: inline-block;
	position: absolute;
	width: 47%;
	right: 0;
}
.header-div input {
	display: inline-grid;
	width: 45%;
}
.inst {
	/*
	position: absolute;
	top: 45px;
	right: 40px;
	*/
	//vertical-align: bottom;
	//float: right;
	background-color: burlywood;
}
.instruction-list {
	background-color: tan;
	//width: 300px;
	padding: 10px;
}

.inst-title {
	text-align: center;
	margin-bottom: 0;
	font-weight: bold;
	font-size:35px;
	font-family: fantasy;
	margin-top: 10px;
	margin-bottom: 10px;
}

.elem span {
	padding-left: 9px;
	padding-right: 9px;
}
.elem {
	padding-top:5px;
	padding-bottom:5px;
}
.first-span {
	font-weight:900;
	color: darkred;
}
.second-span {
	float:right;
	font-weight:bold;
}

			/* R E S U L T   S E C T I O N */
.result-section {
	background-color: #eeeeee;
	overflow: auto;
	margin-top: 8px;
	padding-top: 10px;
}

.search-result {
	display: inline-grid;
	width: 45%;
	padding-top: 10px;
	box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 3px;
}


				/* V I D E O    S E C T I O N */
.video-section {
	//margin-top: 100px;
	margin-left:auto;
	margin-right:auto;
	margin-top:15px;
	top: 96px;
}
.iframe-div {
	/*
	background-color: #674d3c;
	text-align: center;
	*/
	//position: fixed;
	//left: 1.66666%;
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 25px;
	height: 0;
}
iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	/*
	width: 800px;
	height: 600px;
	*/
}
#current_title {
	font-weight:bold;
	font-size: 20px;
	max-width: 500px;
	color: #fff2df;
	font-family: 'Roboto', sans-serif;
	margin: auto;
}
.nav-div {
	padding: 5px;
	text-align: center;
	clear: both;
}

.time-nav-btn {
	background-color: #d9ad7c;
}

.video-related {
	background-color: inherit;
	margin-bottom: 50px;
	overflow: auto;
	//text-align: center;
	//margin-top: 45px;
}
.result-div {
	//margin-bottom: 50px;
	overflow:auto;
	//text-align: center;
	//margin-top: 10px;
}
.video-related .search-result:hover,
.result-div .search-result:hover{
	background-color: #c19962;
}
.video-related .search-result,
.result-div .search-result{
	background-color: burlywood;
}

.result-p {
	font-family: 'Barlow', sans-serif;
}


.placeholder {
	
}
			/* F O O T E R   S E C T I O N */
.div-footer {
	position: fixed;
	text-align: center;
	width: 50%;
	bottom: 0;
}
/*
footer {
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
	clear: both;
	z-index: 2;
}
*/
.bottom-btn {
	
}
.top-btn {
	width: 150px;
	margin: 10px;
	background-color: antiquewhite;
	display: none!important;
}
.footer-toggle-btn {
	left: 0;
	border-right: 1px solid black;
}

			/* G R I D */
.col-6, .col-12 {
	
}
.result-img {
	display: block;
	width: 75%;
	margin: 0 auto;
}
.result-p {
	display: inline-block;
	height: 32px;
}
/*
.btn {
	font-weight: 550;
	font-size: larger;
	display: inline-block;
	padding: 6px 12px;
	line-height: 1.42857143;
	text-align: center;
	white-space: nowrap;
	vertical-align: middle;
	border: 1px solid transparent;
	border-radius: 4px;
}
*/

	/* 
	
				For Small screens/mobile/tablests 
	
	*/

@media only screen and (max-width: 500px){
	.video-section{
		//margin-top: 90Px;
	}
	.iframez {
		display: unset;
		position: relative;
		border: 1px transparent;
	}
	.iframe-div {
		position: inherit;
		left: inherit;
		width: 100%;
		padding-top:0;
	}
	iframe {
		position: static;
	}
	.videoz {
		float:none;
		width: 100%;
		left:unset;
	}
	/*
	footer {
		background-color: transparent;
	}
	*/
	.div-footer {
		background-color: transparent;
		width: 100%!important;
	}
	
	/* GRID */
	.col-6, .col-12 {
		width: 100%;
	}
	header .col-12 {
		height: 400px;
	}
	/* End of grid */
	
	body {
		margin: 0;
	}
	section {
		margin: 0;
	}
	
	/* Header */
	header {
		height: 90px;
		padding: 0;
	}
	/* Form */
	input[type=text]{
		/*
		width: 200px;
		position: relative;
		left: 10px;
		font-size: 16px;
		background-color: #fff2df;
		*/
	}
	.form-submit-btn {
		/*
		position: relative;
		left: 15px;
		top: -2px;
		*/
	}
	/* Instruction */
	/*
	.inst {
		display: none!important;
	}
	*/
	.header-div {
		display: none!important;
	}
	.result-section {
		margin-top: 6px;
	}
	.search-result {
		width: 100%;
		max-width: none;
		height: auto;
		margin: 1.66666% 0;
	}
	.result-p{
		
	}
	.result-img{
		
	}
	.header-toggle-result{
		display: none;
	}
	
	
	/* Video section */
	iframe {
		/*
		width: 300px;
		height: 225px;
		*/
		height: auto!important;
	}
	#current_title {
		width: 100%;
	}
	.result-div {
		margin-top: 0;
	}
	.video-related {
		overflow: hidden;
		height: auto;
		margin-bottom: 50px;
		margin-top: 0;
	}
	.prev-btn {
		
	}
	.page-btn {
		width: 45%;
		display:inline-grid;
		height: 60px;
	}
	#video {
		pointer-events: auto;
	}
	#play-button,
	#fullscreen {
		display: none;
	}
	.btn {
		
	}
	.middle-div-container{
		position: unset;
	}
	.middle-btn {
		position: unset!important;
		right: unset!important;
		margin-top: 5px;
	}
	.top-btn {
		display: inline-block!important;
	}
}

.middle-div-container {	
	text-align: center;
	position: relative;
}
.middle-btn {
	background-color: #d9ad7c;
	//position: absolute;
	//left: 40px;
	border: 1px transparent;
}

.inst-motto {
	width: 450px;
	margin: 0 10px 30px;
}

